Changes for 1.9

 - [DEV-449] added display of host time in screens (Aly)
 - [DEV-449] added system.localtime[local] check (Sasha)
 - [DEV-444] added optional suppressing of processing of older data in log[], logrt[] and eventlog[] (Sasha)

Changes for 1.8.3

 - [ZBX-1607] now trigger line is visible in all zabbix themes in all states and severity in corresponding severity color mixed with opposite color which stored in defines in hex (Maxim Andruhovich / AM)
 - [ZBX-2105] fixed acknowledging events from dashboard for different nodes (Aly)
 - [ZBX-2441] fixed handling of begin/commit/rollback statements with temporarily unavailable SQL server (Sasha)
 - [ZBX-2432] fixed warning message in templates when template has linked templates (Maxim Andruhovich / AM)
 - [ZBX-2325] improved groups\hosts selecting for filter dropdowns (Vedmak)
 - [ZBX-2433] fixed time not updated on slides when now is selected (Vedmak)
 - [ZBX-2452] fixed parsing of integer values from SNMP's Hex-STRING (asaveljevs)
 - [ZBX-2313] forbid to add graph from templates to screen (Vedmak)
 - [ZBX-1503] added information message after host delete action, about host being deleted (Maxim Andruhovich / AM)
 - [ZBX-2418] fixed bug with JavaScript URL parser, anchor were recognized as part of file (Maxim Andruhovich / AM)
 - [ZBXNEXT-323] improved bad performance of the trends for large number of items (Sasha)
 - [ZBXNEXT-327] more intuitive load balancing of pollers with a single item queue (asaveljevs)
 - [ZBXNEXT-326] more efficient synchronization of configuration data (asaveljevs)
 - [ZBX-2153] fixed server crash due to unaligned memory access (asaveljevs)
 - [ZBX-2092] fixed label line height in maps, now all lines have the same line height (Maxim Andruhovich / AM)
 - [DEV-377] improved global search (Aly)
 - [ZBX-1510] fixed history view bound by minute issue (Aly)
 - [ZBX-2339] fixed row height for type of information "text" (Aly)
 - [ZBX-2201] improved history page (Aly)