@@ -6,6 +6,7 @@ Changes for 1.9
 
 Changes for 1.8.3
 
+ - [ZBX-2466] fixed item filter form (Vedmak)
  - [ZBX-1607] now trigger line is visible in all zabbix themes in all states and severity in corresponding severity color mixed with opposite color which stored in defines in hex (Maxim Andruhovich / AM)
  - [ZBX-2105] fixed acknowledging events from dashboard for different nodes (Aly)
  - [ZBX-2441] fixed handling of begin/commit/rollback statements with temporarily unavailable SQL server (Sasha)
